--- a/App.config
+++ b/App.config
@@ -11,10 +11,10 @@
     <userSettings>
         <CleanupTask.Properties.Settings>
             <setting name="Thumbprint" serializeAs="String">
-                <value>7E396C82FBCC84D05EA3D4EA75E43853FF06F686</value>
+                <value>F297C970BC24DC55F99481A612FDF505FA63C195  </value>
             </setting>
             <setting name="ClientId" serializeAs="String">
-                <value>c06930ba-d371-4d82-acab-63bef29fa6b4</value>
+                <value>fd53acb5-0371-406e-a49e-887e1d661c09</value>
             </setting>
         </CleanupTask.Properties.Settings>
     </userSettings>
@@ -22,7 +22,11 @@
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
       <dependentAssembly>
         <assemblyIdentity name="Newtonsoft.Json" publicKeyToken="30ad4fe6b2a6aeed" culture="neutral" />
-        <bindingRedirect oldVersion="0.0.0.0-10.0.0.0" newVersion="10.0.0.0" />
+        <bindingRedirect oldVersion="0.0.0.0-11.0.0.0" newVersion="11.0.0.0" />
+      </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="Microsoft.Azure.KeyVault.Core" publicKeyToken="31bf3856ad364e35" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-2.0.0.0" newVersion="2.0.0.0" />
       </dependentAssembly>
     </assemblyBinding>
   </runtime>
