--- a/packages.config
+++ b/packages.config
@@ -1,11 +1,11 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="Microsoft.Azure.KeyVault" version="3.0.0-alpha" targetFramework="net461" />
-  <package id="Microsoft.Azure.KeyVault.Core" version="1.0.0" targetFramework="net461" />
-  <package id="Microsoft.Azure.KeyVault.WebKey" version="3.0.0-alpha" targetFramework="net461" />
-  <package id="Microsoft.IdentityModel.Clients.ActiveDirectory" version="3.19.4" targetFramework="net461" />
-  <package id="Microsoft.Rest.ClientRuntime" version="2.3.10" targetFramework="net461" />
-  <package id="Microsoft.Rest.ClientRuntime.Azure" version="3.3.10" targetFramework="net461" />
-  <package id="Newtonsoft.Json" version="10.0.2" targetFramework="net461" />
-  <package id="WindowsAzure.Storage" version="9.1.1" targetFramework="net461" />
+  <package id="Microsoft.Azure.KeyVault" version="2.3.2" targetFramework="net461" />
+  <package id="Microsoft.Azure.KeyVault.Core" version="2.0.4" targetFramework="net461" />
+  <package id="Microsoft.Azure.KeyVault.WebKey" version="2.0.7" targetFramework="net461" />
+  <package id="Microsoft.IdentityModel.Clients.ActiveDirectory" version="3.19.6" targetFramework="net461" />
+  <package id="Microsoft.Rest.ClientRuntime" version="2.3.11" targetFramework="net461" />
+  <package id="Microsoft.Rest.ClientRuntime.Azure" version="3.3.12" targetFramework="net461" />
+  <package id="Newtonsoft.Json" version="11.0.2" targetFramework="net461" />
+  <package id="WindowsAzure.Storage" version="9.2.0" targetFramework="net461" />
 </packages>
